--- a/index.html
+++ b/index.html
@@ -174,13 +174,13 @@
 									<select class="selectpicker form-control" style="height: auto;background-color: var(--hellgrau);color: var(--grundfarbe);border: 2px solid var(--grundfarbe);font-size: 14px;"
 										onchange="premiumshishawahl()" id="premiumshishaoutput" data-width="auto">
 										<option data-img="img/product-preview.png" selected>Geschmack wählen</option>
-										<option data-img="img/product-preview.png" data-tabak="TP">Ringel-Rangel</option>
-										<option data-img="img/product-preview.png" data-tabak="TP">Okolom</option>
-										<option data-img="img/product-preview.png" data-tabak="187">Hamburg</option>
-										<option data-img="img/product-preview.png" data-tabak="Aqua Menta">Aqua-Black-Box</option>
-										<option data-img="img/product-preview.png" data-tabak="Dalia">Love66</option>
-										<option data-img="img/product-preview.png" data-tabak="Dschinni">Lemon-Fresh</option>
-										<option data-img="img/product-preview.png" data-tabak="Dschinni">Da-Bomb</option>
+										<option data-img="img/product-preview.png" data-tabak="TP">Ringel-Rangel(TP)</option>
+										<option data-img="img/product-preview.png" data-tabak="TP">Okolom(TP)</option>
+										<option data-img="img/product-preview.png" data-tabak="187">Hamburg(187)</option>
+										<option data-img="img/product-preview.png" data-tabak="Aqua Menta">Aqua-Black-Box(AquaMenta)</option>
+										<option data-img="img/product-preview.png" data-tabak="Dalia">Love66(Dalia)</option>
+										<option data-img="img/product-preview.png" data-tabak="Dschinni">Lemon-Fresh(Dschinni)</option>
+										<option data-img="img/product-preview.png" data-tabak="Dschinni">Da-Bomb(Dschinni)</option>
 									</select>
 								</div>
 							</div>
@@ -241,9 +241,9 @@
 										onchange="exclusivshishawahl()" id="exclusivshishaoutput" data-width="auto">
 										<option data-img="img/product-preview.png" selected>Geschmack wählen</option>
 										<option data-img="img/product-preview.png" data-tabak="Fumari">Ceylon-Chi/Spy-Chi(Fumari)</option>
-										<option data-img="img/product-preview.png" data-tabak="Social Smoke">Lemon-Chill(Social Smoke)</option>
-										<option data-img="img/product-preview.png" data-tabak="Social Smoke">Watermelon-Chill(Social Smoke)</option>
-										<option data-img="img/product-preview.png" data-tabak="Social Smoke">Wildberry-Chill(Social Smoke)</option>
+										<option data-img="img/product-preview.png" data-tabak="Social Smoke">Lemon-Chill(SocialSmoke)</option>
+										<option data-img="img/product-preview.png" data-tabak="Social Smoke">Watermelon-Chill(SocialSmoke)</option>
+										<option data-img="img/product-preview.png" data-tabak="Social Smoke">Wildberry-Chill(SocialSmoke)</option>
 									</select>
 								</div>
 							</div>
