--- a/index.html
+++ b/index.html
@@ -646,7 +646,8 @@ rgb(255, 255, 255, 0.9),rgba(255, 255, 255, 0.9)),url(img/people.svg) no-repeat 
 					<form class="was-validated" >
 							<div class="form-group form-check">
 								  <label class="form-check-label" style="font-size:large; ">
-									<input class="form-check-input" style="margin: 0;position: relative;" id="agb" type="checkbox" name="remember" required> Ich akzeptiere die AGBs.
+									<input class="form-check-input" style="margin: 0;position: relative;" id="agb" type="checkbox" name="remember" required> Ich akzeptiere die 
+									<a href="#myModal2" class="links" id="modal-trigger2" data-toggle="modal">AGB</a>.
 									<div class="valid-feedback">AGBs akzeptiert.</div>
 									<div class="invalid-feedback">AGBs müssen vor Bestellung akzeptiert werden.</div>
 								  </label>
@@ -809,7 +810,7 @@ data-close-text="Got it!">
 
 	<!-- ////////// Modal IMPRESSUM ///////// -->
 	<div class="modal" id="myModal" tabindex="-1" role="dialog" aria-hidden="true" style="text-align: center; width: 100%; height: 100%; padding-right: 0px;">
-			<div class="modal-dialog modal-full" role="document">
+			<div class="modal-dialog modal-full" style="height: 100%;padding: 10px;" role="document">
 				<div class="modal-content" style="text-align: center; width: 100%;padding-right: 0px; height: 100%;">
 					<div class="modal-header">
 						<h1 class="modal-title">Impressum</h1>
@@ -840,6 +841,35 @@ data-close-text="Got it!">
 			</div>
 		</div>
 
+		<!-- ////////// Modal AGB ///////// -->
+	<div class="modal" id="myModal2" tabindex="-1" role="dialog" aria-hidden="true" style="text-align: center; width: 100%; height: 100%; padding-right: 0px;">
+			<div class="modal-dialog modal-full"  style="height: 100%;padding: 10px;" role="document">
+				<div class="modal-content" style="text-align: center; width: 100%;padding-right: 0px; height: 100%;">
+					<div class="modal-header">
+						<h1 class="modal-title">AGB</h1>
+						<button type="button" class="close" data-dismiss="modal" aria-label="Close">
+							<i class="material-icons">close</i>
+						</button>
+					</div>
+					<div class="modal-body p-4" id="result" style="text-align: center; width: 100%;padding-right: 0px; height: 100%;">
+							<p style="color: white;">Hier kommt der Text rein</p>
+								<hr class="style-two">
+								<p style="color: white;">1. Überschrift: </p>
+								<p>Text</p>
+								<hr class="style-two">
+								<p style="color: white;">2. Überschrift:</p>
+								<p>Text</p>
+								<p>Text</p>
+								<p>Text</p>
+								<hr class="style-two">
+								<p style="color: white;">3. Überschrift</p>
+								<p>Text</p>
+								<p>Text</p>
+					</div>
+					<div class="modal-footer"></div>
+				</div>
+			</div>
+		</div>
 
 
 
