--- a/index.html
+++ b/index.html
@@ -1,5 +1,49 @@
 <!doctype html>
 <html lang="en" class="no-js">
+<style>html {scroll-behavior: smooth; }</style>
+<style>
+
+		.sidenav {
+		  height: 100%;
+		  width: 0;
+		  position: fixed;
+		  z-index: 7;
+		  top: 0;
+		  left: 0;
+		  background-color: #111;
+		  overflow-x: hidden;
+		  transition: 0.5s;
+		  padding-top: 60px;
+		  text-align:center;
+		}
+		
+		.sidenav a {
+		  padding: 8px 8px 8px 32px;
+		  text-decoration: none;
+		  font-size: 25px;
+		  color: var(--grundfarbe);
+		  display: block;
+		  transition: 0.3s;
+		
+		}
+		
+		.sidenav a:hover{
+		  color: #f1f1f1;
+		}
+		
+		.sidenav .closebtn {
+		  position: absolute;
+		  top: 0;
+		  right: 25px;
+		  font-size: 36px;
+		  margin-left: 50px;
+		}
+		
+		@media screen and (max-height: 450px) {
+		  .sidenav {padding-top: 15px;}
+		  .sidenav a {font-size: 18px;}
+		}
+		</style>
 <head>
 	<meta charset="UTF-8">
 	<meta name="theme-color" content="#8e793e">
@@ -35,26 +79,44 @@
 		</div>
 	</div>
 </section>
-
+					<script>
+							function openNav() {
+							document.getElementById("mySidenav").style.width = "100%";
+							}
+							
+							function closeNav() {
+							document.getElementById("mySidenav").style.width = "0";
+							}
+					</script>
 	<main>
-		
-	<nav class="navbar2">
+			<nav class="navbar2">	  
 				<a href="index.html" ><img src="img/logo.png" style="position: fixed; width: 100px; height: 35px; top: 15px; left: 0%; z-index: 4;"></a>
-			<div class="hamburger">
+			<div class="hamburger" onclick="openNav()">
 				<div class="line"></div>
 				<div class="line"></div>
 				<div class="line"></div>
 			</div>
-			<ul class="nav-links">
-				<li><a class="btn_nav" href="#auswahl_shisha"><h3>Shishas</h3></a></li>
+		</nav>
+			<div id="mySidenav" class="sidenav" style="z-index: 7; background: var(--white);">
+					<a href="javascript:void(0)" class="closebtn" style="color: var(--grundfarbe);" onclick="closeNav()">&times;</a>
+					<a href="#auswahl_shisha" class="btn_nav" style="color: var(--white);" onclick="closeNav()">Shishas</a>
+					<a href="#auswahl_getränke" class="btn_nav" onclick="closeNav()">Getränke/Snacks</a>
+					<a href="#social-media" class="btn_nav" onclick="closeNav()">Social-Media</a>
+					<a href="#lieferzeiten" class="btn_nav" onclick="closeNav()">Lieferzeiten</a>
+					<a href="#kontakt" class="btn_nav" onclick="closeNav()">Kontakt</a>
+					<a href="#anfahrt" class="btn_nav" onclick="closeNav()">Anfahrt</a>
+				  </div>
+			<!--<ul class="nav-links">
+				<li><a class="btn_nav" href="#auswahl_shisha" onclick="closeNav()"><h3>Shishas</h3></a></li>
 				<li><a class="btn_nav" href="#auswahl_getränke"><h3>Getränke/Snacks</h3></a></li>
 				<li><a class="btn_nav" href="#social-media"><h3>Social-Media</h3></a></li>
 				<li><a class="btn_nav" href="#lieferzeiten"><h3>Lieferzeiten</h3></a></li>
 				<li><a class="btn_nav" href="#kontakt"><h3>Kontakt</h3></a></li>
 				<li><a class="btn_nav" href="#anfahrt"><h3>Anfahrt</h3></a></li>
 			</ul>
-		</nav>
-	
+		-->
+		
+
 		<!-- <a class="btn_telefon slideanim2" href="tel:+51112345667" ><i class="material-icons">phone</i></a> -->
 		<!-- <a class="btn_whatsapp slideanim2" href="https://api.whatsapp.com/send?phone=491762295702" ><i class="fab fa-whatsapp"></i></a> -->
 
