--- a/index.html
+++ b/index.html
@@ -709,7 +709,7 @@ rgb(255, 255, 255, 0.9),rgba(255, 255, 255, 0.9)),url(img/people.svg) no-repeat 
 					<div class="form-group form-check">
 						  <label class="form-check-label" style="font-size:large; ">
 							<input class="form-check-input" style="margin: 0;position: relative;" id="agb" type="checkbox" name="remember" required> Ich akzeptiere die 
-							<a href="#myModal2" class="links" id="modal-trigger2" data-toggle="modal">AGB</a>.
+							<a href="#myModal2" class="links" id="modal-trigger2" data-toggle="modal">AGBs</a>.
 							<div class="valid-feedback">AGBs akzeptiert.</div>
 							<div class="invalid-feedback">AGBs müssen vor Bestellung akzeptiert werden.</div>
 						  </label>
@@ -719,9 +719,9 @@ rgb(255, 255, 255, 0.9),rgba(255, 255, 255, 0.9)),url(img/people.svg) no-repeat 
 			<footer class="cd-cart__footer" >
 				
 				<a style="font-size: 16px; background: var(--grundfarbe);color: white;" type="submit" class="cd-cart__checkout" id="warenkorb-whatsapp" onclick="return getWarenkorb()">
-          <em> <i class="fab fa-whatsapp"></i> WhatsApp-Bestellung - €<span>0</span>
-            <svg class="icon icon--sm" viewBox="0 0 24 24"><g fill="none" stroke="currentColor"><line stroke-width="2" stroke-linecap="round" stroke-linejoin="round" x1="3" y1="12" x2="21" y2="12"/><polyline stroke-width="2" stroke-linecap="round" stroke-linejoin="round" points="15,6 21,12 15,18 "/></g>
-            </svg>
+          <em><i class="fab fa-whatsapp"></i> WhatsApp-Bestellung - €<span>0</span>
+            <!--<svg class="icon icon--sm" viewBox="0 0 24 24"><g fill="none" stroke="currentColor"><line stroke-width="2" stroke-linecap="round" stroke-linejoin="round" x1="3" y1="12" x2="21" y2="12"/><polyline stroke-width="2" stroke-linecap="round" stroke-linejoin="round" points="15,6 21,12 15,18 "/></g>
+            </svg>-->
 		  </em>
 		  
 		</a>
