--- a/index.html
+++ b/index.html
@@ -709,7 +709,7 @@ rgb(255, 255, 255, 0.9),rgba(255, 255, 255, 0.9)),url(img/people.svg) no-repeat 
 					<div class="form-group form-check">
 						  <label class="form-check-label" style="font-size:large; ">
 							<input class="form-check-input" style="margin: 0;position: relative;" id="agb" type="checkbox" name="remember" required> Ich akzeptiere die 
-							<a href="#myModal2" class="links" id="modal-trigger2" data-toggle="modal">AGBs</a>.
+							<a href="#myModal2" class="links" id="modal-trigger2" data-toggle="modal">AGBs von Sahir</a>.
 							<div class="valid-feedback">AGBs akzeptiert.</div>
 							<div class="invalid-feedback">AGBs müssen vor Bestellung akzeptiert werden.</div>
 						  </label>
