--- a/index.html
+++ b/index.html
@@ -619,11 +619,11 @@ rgb(255, 255, 255, 0.9),rgba(255, 255, 255, 0.9)),url(img/people.svg) no-repeat 
   <div class="card" style="width: 100%; border-radius: 2rem; background: rgba(255, 255, 255, 0); box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);">
 	<div class="card-body">
 		<div style="text-align: center;">
-			<p><h5><b>Montags - Donnerstag & Sonntags</b></h5></p>
+			<p><h4>Montags - Donnerstag & Sonntags</h4></p>
 			<p><h5><b>Vermietung ab 15:00 Uhr -  Abholung bis spätestens 23:00 Uhr</b></h5></p>
 			<br>
 			<hr class="style-two">
-			<p><h5><b>Freitags - Samstags</b></h5></p>
+			<p><h4>Freitags - Samstags</h4></p>
 			<p><h5><b>Vermietung ab 15:00 Uhr -  Abholung bis spätestens Sonntag 02:00 Uhr</b></h5></p>
 </div>
 	</div>
@@ -718,13 +718,13 @@ rgb(255, 255, 255, 0.9),rgba(255, 255, 255, 0.9)),url(img/people.svg) no-repeat 
 			</div>
 			<footer class="cd-cart__footer" >
 				
-				<a style="font-size: 16px; background: var(--grundfarbe);color: white;" type="submit" class="cd-cart__checkout" id="warenkorb-whatsapp" onclick="return getWarenkorb()">
+				<button style="font-size: 16px; background: var(--grundfarbe);color: white;" type="submit" class="cd-cart__checkout" id="warenkorb-whatsapp" onclick="return getWarenkorb()">
           <em><i class="fab fa-whatsapp"></i> WhatsApp-Bestellung - €<span>0</span>
             <!--<svg class="icon icon--sm" viewBox="0 0 24 24"><g fill="none" stroke="currentColor"><line stroke-width="2" stroke-linecap="round" stroke-linejoin="round" x1="3" y1="12" x2="21" y2="12"/><polyline stroke-width="2" stroke-linecap="round" stroke-linejoin="round" points="15,6 21,12 15,18 "/></g>
             </svg>-->
 		  </em>
 		  
-		</a>
+		</button>
 
 			</footer>
 		</div>
