--- a/index.html
+++ b/index.html
@@ -718,13 +718,13 @@ rgb(255, 255, 255, 0.9),rgba(255, 255, 255, 0.9)),url(img/people.svg) no-repeat 
 			</div>
 			<footer class="cd-cart__footer" >
 				
-				<button style="font-size: 16px; background: var(--grundfarbe);color: white;" type="submit" class="cd-cart__checkout" id="warenkorb-whatsapp" onclick="return getWarenkorb()">
+				<a style="font-size: 16px; background: var(--grundfarbe);color: white;" type="submit" class="cd-cart__checkout" id="warenkorb-whatsapp" onclick="return getWarenkorb()">
           <em><i class="fab fa-whatsapp"></i> WhatsApp-Bestellung - €<span>0</span>
             <!--<svg class="icon icon--sm" viewBox="0 0 24 24"><g fill="none" stroke="currentColor"><line stroke-width="2" stroke-linecap="round" stroke-linejoin="round" x1="3" y1="12" x2="21" y2="12"/><polyline stroke-width="2" stroke-linecap="round" stroke-linejoin="round" points="15,6 21,12 15,18 "/></g>
             </svg>-->
 		  </em>
 		  
-		</button>
+		</a>
 
 			</footer>
 		</div>
@@ -1038,9 +1038,9 @@ $(document).ready(function(){
 		function getWarenkorb() {
 			console.log("Funktion drin");
 			var items = document.getElementsByClassName("cd-cart__product");
+			var menge = document.getElementsByClassName("reset");
 			var warenausgang = document.getElementById("warenkorb-whatsapp");
 			var agbs = document.getElementById("agb");
-			var menge = 1;
 			var x = 'https://wa.me/491734937652?text=Hallo%20Team%20Shisha2you,ich%20moechte%20gerne%20Folgendes%20bestellen:'; //"%201x%20Classic-Shisha%20Social-Smoke%20LemonFresh%20an%20folgende%20Adresse%20liefern:%20" + "https://maps.google.com/?q=" + position.coords.latitude + "," +  position.coords.longitude;
 			var gesamtpreis = 0;
 			var shisha = "";
@@ -1050,11 +1050,9 @@ $(document).ready(function(){
 				if (items[i].getAttribute('data-art') == "shisha"){ 
 					var shisha = "shisha"; 
 				}else{}
-				menge = menge + i
-				var anzahl = document.getElementById("menge" + menge).value 
-				x = x + "%20"+ anzahl + "x%20" + items[i].getAttribute('data-name') + "%20" + parseFloat(items[i].getAttribute('data-price')*anzahl) + "€%20";
+				x = x + "%20" + menge[i].selectedIndex + "x%20" + items[i].getAttribute('data-name') + "%20" + parseFloat(items[i].getAttribute('data-price')  * menge[i].selectedIndex   )    + "€%20";
 				console.log("Link: " + x);
-				gesamtpreis = gesamtpreis + parseFloat(items[i].getAttribute('data-price')*anzahl);
+				gesamtpreis = gesamtpreis + parseFloat(items[i].getAttribute('data-price')*menge[i].selectedIndex);
 				}
 			if (agbs.checked){
 				if (shisha != ""){
