--- a/index.html
+++ b/index.html
@@ -718,8 +718,8 @@ rgb(255, 255, 255, 0.9),rgba(255, 255, 255, 0.9)),url(img/people.svg) no-repeat 
 			</div>
 			<footer class="cd-cart__footer" >
 				
-				<a style="font-size: 16px; background: var(--grundfarbe);color: white;" class="cd-cart__checkout" id="warenkorb-whatsapp" onclick="return getWarenkorb()">
-          <em><i class="fab fa-whatsapp"></i> WhatsApp-Bestellung - €<span>0</span>
+				<a style="font-size: 16px; background: #25d366;color: white;" class="cd-cart__checkout" id="warenkorb-whatsapp" onclick="return getWarenkorb()">
+          <em><i class="fab fa-whatsapp"></i> WhatsApp-Bestellung - €<span>0</span><div class="icon"></div>
             <!--<svg class="icon icon--sm" viewBox="0 0 24 24"><g fill="none" stroke="currentColor"><line stroke-width="2" stroke-linecap="round" stroke-linejoin="round" x1="3" y1="12" x2="21" y2="12"/><polyline stroke-width="2" stroke-linecap="round" stroke-linejoin="round" points="15,6 21,12 15,18 "/></g>
             </svg>-->
 		  </em>
